--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "build:css": "tailwindcss build ./src/styles.css -o ./public/css/tailwind.css"
   },
   "keywords": [],
   "author": "",
