--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -27,10 +27,11 @@
     "@coreui/vue-chartjs": "^3.0.0",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
-    "chart.js": "^4.4.4",
+    "chart.js": "^4.4.6",
     "pinia": "^2.2.2",
     "simplebar-vue": "^2.3.5",
     "vue": "^3.5.8",
+    "vue-chartjs": "^5.3.2",
     "vue-good-table": "^2.21.11",
     "vue-router": "^4.4.5"
   },
