--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -25,9 +25,13 @@
     "@coreui/utils": "^2.0.2",
     "@coreui/vue": "^5.4.1",
     "@coreui/vue-chartjs": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "lucide-vue-next": "^0.454.0",
     "pinia": "^2.2.2",
     "simplebar-vue": "^2.3.5",
     "vue": "^3.5.8",
